# omnara

./: .dockerignore  .env.example  .flyignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AMP.md  AMP_streaming.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUMMARY.md  FRONTEND_ARCHITECTURE.md  Makefile  README.md  conftest.py  dev-start.sh  dev-stop.sh  docker-compose.yml  dummy_test.py  dummy_test.txt  dummy_test_file.txt  dummy_test_file_2.txt  fly.backend.toml  fly.relay.toml  fly.servers.toml  fly.web.toml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py  test_data.json
.github/: CONTRIBUTING.md
apps/: LICENSE  README.md
backend/: README.md  main.py  models.py  requirements.txt
cli/: package-lock.json  package.json
cli_wrappers/: __init__.py
docker/: backend.Dockerfile  db-init.Dockerfile  servers.Dockerfile
docs/: CLI_AUTHENTICATION.md  README.md  architecture-diagram.md  authentication.mdx  cli-reference.md  introduction.mdx  message-types-plan.md  mint.json  n8n.md  quickstart.mdx  session-sharing-plan.md  ssh-mvp.md  terminal-sharing-mvp.md
frontend/: README.md
infrastructure/: README.md
n8n-node-omnara/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
omnara/: __init__.py  __main__.py  auth.py  cli.py  session_utils.py
scripts/: cibw_before_build.sh  format.sh  generate_jwt_keys.py  init-db.sh  lint.sh  run_all_tests.sh  run_omnara_session.py
servers/: README.md  app.py  requirements.txt
shared/: README.md  alembic.ini  requirements.txt  (+3 more)
(+584 files in other folders)
